<resources>
    <string name="app_name">西瓜音乐</string>
    <string name="launcher_jump">跳过</string>
    <string name="login">登录</string>
    <string name="music">歌单</string>
    <string name="listen">我听</string>
    <string name="mine">我的音乐</string>
    <string name="notsign">未登录</string>
    <string name="home">首页</string>
    <string name="more">更多</string>
    <string name="must_listen">经典必听</string>
    <string name="recommend_everyday">每日推荐</string>
    <string name="music_menu">歌单</string>
    <string name="music_list">排行榜</string>
    <string name="other_login_method">其他登录方式</string>
    <string name="email_login">邮箱登录</string>
    <string name="font_icon_weixin">{fa-weixin}</string>
    <string name="font_icon_qq">{fa-qq}</string>
    <string name="font_icon_weibo">{fa-weibo}</string>
    <string name="forget_password">忘记密码？</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_number">请输入手机号</string>
    <string name="login_code">验证码登录</string>
    <string name="login_password">密码登录</string>
    <string name="auto_login_by_phone">未注册手机验证后自动登录</string>
    <string name="your_word">你喜欢的世界</string>
    <string name="icon_font_email">\ue6ac</string>
    <string name="video">视频</string>
    <string name="click_login">点击登录</string>
    <string name="click_login_info">1秒登录，专享个性化服务</string>
    <string name="local_music">本地音乐</string>
    <string name="has_buy">已购音乐</string>
    <string name="has_download">下载历史</string>
    <string name="my_favorite">我的收藏</string>
    <string name="loading_data">努力加载中…</string>
    <string name="loading_recommend">正在为您开启推荐..</string>
    <string name="loading_recommend_more">看的越多，推荐越准</string>
    <string name="load_error">加载失败,点击重试</string>

    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="no_storage_permission">没有存储空间权限，无法扫描本地歌曲！</string>


    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>

    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>

    <string name="recent_update">最近更新：%s</string>
    <string name="load_failed">加载失败</string>
    <string name="random_queue_title">随机播放</string>
    <string name="error_no_metadata">没有媒体数据</string>
    <string name="label_previous">上一首</string>
    <string name="label_pause">暂停</string>
    <string name="label_play">播放</string>
    <string name="label_next">下一首</string>
    <string name="notification_channel">音乐通知</string>
    <string name="notification_channel_description">我的音乐通知栏</string>
    <string name="favorite">喜欢</string>
    <string name="no_music">无音乐</string>
    <string name="play_time_start">00:00</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="mode_loop">列表循环</string>
    <string name="default_type">默认类型</string>
    <string name="network_error">网络连接失败，请稍后重试</string>
    <string name="play_error">播放资源异常</string>
    <string name="artist_name">歌手:</string>
    <string name="public_time">发行时间</string>
    <string name="comment">comment</string>


</resources>
