<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="20dp">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:src="@drawable/ic_icon_return_left" />

    <android.support.v7.widget.AppCompatTextView

        android:id="@+id/tv_app_name"
        style="@style/black_bold_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/your_word"
        android:textColor="@color/red" />


    <LinearLayout
        android:id="@+id/ll_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_code"
            style="@style/black_media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/login_code" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_password"
            style="@style/black_media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/login_password" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_view_login"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/dp_10">

        <View
            android:id="@+id/view_login_code"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />

        <View
            android:id="@+id/view_login_password"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray" />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_number"
        android:textColorHint="@color/light_gray"
        app:errorEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_sign_in_phone_number"
            style="@style/black_mini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            android:ellipsize="end"
            android:inputType="phone"
            android:maxLength="11" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password"
        android:textColorHint="@color/light_gray"
        app:errorEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_gray"
        app:passwordToggleTintMode="multiply">

        <android.support.design.widget.TextInputEditText

            android:id="@+id/edit_sign_in_password"
            style="@style/black_mini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/sign_button_bg_noraml_shape"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/login"
        android:textColor="@color/sign_text_normal_color" />


    <TextView
        android:id="@+id/tv_auto_login_by_phone"
        style="@style/gray_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/auto_login_by_phone"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_email_or_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/email_login"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/light_gray"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <View
            android:id="@+id/view_left_other_login"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10" />

        <TextView
            android:id="@+id/tv_other_login"
            style="@style/gray_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_40"
            android:paddingRight="@dimen/dp_40"
            android:text="@string/other_login_method" />

        <View
            android:id="@+id/view_right_other_login"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_icon_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/font_icon_weixin"
            android:textColor="#04b00f"
            android:textSize="28sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/font_icon_qq"
            android:textColor="@color/dodgerblue"
            android:textSize="28sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/font_icon_weibo"
            android:textColor="@color/tomato"
            android:textSize="28sp" />
    </LinearLayout>


</LinearLayout>