<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/rl_bottom_control"
    android:layout_gravity="center"
    android:padding="@dimen/playback_controls_padding">
    <ImageView
        android:id="@+id/album_art"
        tools:src="@drawable/ic_launcher"
        android:layout_width="@dimen/playback_controls_albumart_size"
        android:layout_height="@dimen/playback_controls_albumart_size"
        android:scaleType="centerCrop"
        android:contentDescription="@string/currently_playing_song"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:orientation="vertical"
        android:layout_toEndOf="@id/album_art"
        android:layout_toStartOf="@+id/play_next"
        android:layout_centerVertical="true">
        <TextView
            style="@style/black50_mini"
            android:id="@+id/title"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_song" />
        <TextView
            style="@style/gray_small"
            android:id="@+id/artist"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_artist" />
    </LinearLayout>

    <ImageButton
        android:padding="@dimen/playback_controls_padding"
        android:id="@+id/play_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_play_next"
        android:layout_marginEnd="@dimen/playback_controls_margin"
        android:contentDescription="@string/play_pause"
        android:background="?android:attr/selectableItemBackground"
        android:tintMode="src_in"
        android:layout_toStartOf="@+id/play_pause"
        android:tint="@color/theme_red"/>
    <ImageButton
        android:padding="@dimen/playback_controls_padding"
        android:id="@+id/play_pause"
        android:layout_centerVertical="true"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/playback_controls_margin"
        android:background="?android:attr/selectableItemBackground"
        android:layout_toStartOf="@+id/play_list"
        android:src="@drawable/ic_pause"
        android:contentDescription="@string/play_pause"
        android:tintMode="src_in"
        android:tint="@color/theme_red"/>

    <ImageButton
        android:padding="@dimen/playback_controls_padding"
        android:id="@+id/play_list"
        android:layout_centerVertical="true"
        android:layout_width="48dp"
        android:layout_marginEnd="@dimen/playback_controls_padding"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_play_list"
        android:contentDescription="@string/play_pause"
        android:tintMode="src_in"
        android:tint="@color/theme_red"/>

</RelativeLayout>
